# CSC340Project

./: CMakeLists.txt  Main.cpp  Person.cpp  Person.h  README.md  Reservation.cpp  Reservation.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  Waiter.cpp  Waiter.h  documentation.txt  reservationList.txt  tableList.txt
